Fixed responsive look on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,9 +26,10 @@ body {
 .dock {
   position: absolute;
   bottom: 3px;
-  height: calc(5vh - 5px);
+  height: 60px;
   z-index: 12;
   width: 300px;
+  min-height: 50px;
 }
 
 .dock-bg {
@@ -36,21 +37,33 @@ body {
   bottom: 0;
   background-color: #7c7c7c;
   opacity: 0.5;
-  height: calc(5vh - 5px);
+  height: 60px;
   width: 300px;
   border-radius: 15px;
   border: 1px solid #404042;
 }
 
 .dock .app {
-  width: 40px;
   height: 40px;
+  width: 40px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 5px;
   position: relative;
   display: inline-block;
+}
+
+.app .active {
+  background-color: transparent;
+  color: #c0c0c0;
+  position: absolute;
+  z-index: 10;
+  font-size: 2em;
+  width: 100%;
+  height: 100%;
+  top: 10px;
+  overflow: hidden;
 }
 
 .app .tooltiptext {
